fix shearing during scrolling in embedding apps on 10.2 (r=ccarlen/sr=sfraser) bug 162885